коррекция пути к файлу snk

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -16,7 +16,7 @@
 
         <SignAssembly>true</SignAssembly>
         <DelaySign>false</DelaySign>
-        <AssemblyOriginatorKeyFile>$(SolutionDir)cav.snk</AssemblyOriginatorKeyFile>
+        <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)cav.snk</AssemblyOriginatorKeyFile>
 
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
